feat: user crud
